Update Workflow Paths: Adjust path for 'config-sample.php'

--- a/.github/workflows/translateandtag.yml
+++ b/.github/workflows/translateandtag.yml
@@ -7,7 +7,7 @@ on:
     paths:
       - 'README_de.md'
       - 'index.php'
-      - 'config-sample.php'
+      - 'config/config-sample.php'
       - 'privacy.php'
 
 permissions:
