--- a/.github/workflows/translateandtag.yml
+++ b/.github/workflows/translateandtag.yml
@@ -26,36 +26,10 @@ jobs:
       with:
         python-version: 3.x
 
-    - name: Install translate dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install --upgrade googletrans==3.1.0a0
-        curl -o translate-md.py https://raw.githubusercontent.com/dbt1/translate-md/refs/heads/master/translate-md.py
-        chmod 755 translate-md.py
-        curl -o translate-md-config.json https://raw.githubusercontent.com/dbt1/translate-md/refs/heads/master/translate-md-config.json.sample
-
     - name: Prepare Git user data
       run: |
         git config --global user.email "dbt@novatux.de"
         git config --global user.name "Thilo Graf"
-
-    - name: Verify translate-md.py download
-      run: |
-        if [ ! -f translate-md.py ]; then
-         echo "translate-md.py was not downloaded!"
-         exit 1
-        fi
-
-    - name: Translate README
-      run: |
-        cp README_de.md template.md
-        python translate-md.py --template-md template.md --output-dir . --prefix README_ --main-doc README.md -c translate-md-config.json -s de
-        rm template.md translate-*.*
-
-    - name: Commit translated README
-      run: |
-        git add README*.md
-        git commit -m "readme: Automatically translated README"
 
     - name: Install tagit dependencies
       run: |
@@ -73,7 +47,7 @@ jobs:
 
     - name: Tagging
       run: |
-        python tagit.py -f index.php -f README_de.md -f README_en.md -f README_es.md -f README_fr.md -f README_it.md --scheme-file tagit-config.json
+        python tagit.py -f index.php -f README_de.md -f README_en.md --scheme-file tagit-config.json
 
     - name: Commit and push version and tag changes
       run: |
